--- a/api/.htaccess
+++ b/api/.htaccess
@@ -2,7 +2,7 @@ Require expr %{req:X-Requested-With} == 'XMLHttpRequest'
 
 RewriteEngine on
 RewriteBase /~jimmy/yp/api/
-RewriteRule ^yp/([^-]+)-([^-]+)-([^-]*)/([0-9-]+)$ ../yp.py?fz=$1&dz=$2&date=$4&train=$3 [L,QSA]
+RewriteRule ^yp/([^-]+)-([^-]+)-([^/]*)/([0-9-]+)$ ../yp.py?fz=$1&dz=$2&date=$4&train=$3 [L,QSA]
 RewriteRule ^train/(.+)$ ../train.php?$1 [L]
 
 Header unset Vary
