--- a/api/.htaccess
+++ b/api/.htaccess
@@ -3,6 +3,6 @@ Require expr %{req:X-Requested-With} == 'XMLHttpRequest'
 RewriteEngine on
 RewriteBase /~jimmy/yp/api/
 RewriteRule ^yp/([^-]+)-([^-]+)-([^/]*)/([0-9-]+)$ ../yp.py?fz=$1&dz=$2&date=$4&train=$3 [L,QSA]
-RewriteRule ^train/(.+)$ ../train.py?$1 [L]
+RewriteRule ^train/([^/]+)/(.+)$ ../train.py?train=$1&date=$2 [L]
 
 Header unset Vary
